<resources>
    <string name="app_name">Emika</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="picker_today">Today</string>
    <string name="picker_am">AM</string>
    <string name="picker_pm">PM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_stranger">Welcome, Stranger!</string>
    <string name="to_access_emika_please_login_or_sign_up">Sign Up or Login to make your team more productive</string>
    <string name="enter_your_password_at_least_6_chars">Enter your password at least 6 chars</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="login_string">Welcome! We know who you are!</string>
    <string name="create_new_account">Welcome, Stranger! </string>
    <string name="complete_basic_info">Complete your basic profile information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="join_existing_company">Join existing company</string>
    <string name="create_new_workspace">Create new Workspace</string>
    <string name="join_oir_create_new_workspace">Join oir create new workspace</string>
    <string name="choose_a_name_of_your_workspace">Choose a name of your workspace</string>
    <string name="enter_workspace_name">Enter workspace name</string>
    <string name="personal_workspace">Personal workspace</string>
    <string name="my_team_and_me">My team and me</string>
    <string name="short_password">Password must contains at least 6 characters</string>
    <string name="how_many_people_work_for_the_company">How many people work for the company</string>
    <string name="under_20">Under 20</string>
    <string name="under_100">Under 100</string>
    <string name="under_500">Under 500</string>
    <string name="over_500">Over 500</string>
    <string name="back">back</string>
    <string name="wait_to_be_invited">wait to be invited</string>
    <string name="create_company">Create company</string>
    <string name="are_you_planning_to_work_alone_or_with_teammates">Are you planning to work alone or with teammates?</string>
    <string name="waiting_to_join_existing_company">"Waiting to join existing company "</string>
    <string name="please_ask_a_member_of_the_company">Please, ask a member of the company with access rights to invite new members to send invitation to your email:</string>
    <string name="log_out">Log out</string>
    <string name="add_task">Add task</string>
    <string name="job_title">Job title</string>
    <string name="personal_biography">Personal biography</string>
    <string name="update_photo">Update photo</string>
    <string name="save_changes">Save changes</string>
    <!--    //custom view-->
    <string name="progress_template">%sh</string>
    <string name="description">Description...</string>
    <string name="select_project">Select project</string>
    <string name="select_section">Select section</string>
    <string name="set_task_purpose">Set task purpose...</string>
    <string name="select_epic_links">Select Epic Links</string>
    <string name="edit_account">Edit account</string>
    <string name="performance">Performance</string>
    <string name="contacts">Contacts</string>
    <string name="rename_task">Rename task</string>
    <string name="move_task">Move task</string>
    <string name="duplicate_task">Duplicate task</string>
    <string name="copy_task">Copy task</string>
    <string name="cancel_task">Cancel task</string>
    <string name="restore_password">Restore password</string>
    <string name="next">next</string>
    <string name="archieve_task">Archive task</string>
    <string name="continue_string">Continue⭢</string>
    <string name="check_invitations">Check invitations</string>
    <string name="or_string">or</string>
    <string name="deadline_string">Deadline</string>
    <string name="email_string">email</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="team">Team</string>
    <string name="company">Company</string>
    <string name="list_of_all_members">List of All Members</string>
    <string name="all_members">All members</string>
    <string name="edit_profile">Edit profile</string>
    <string name="managers">Managers</string>
    <string name="co_workers">Co-Workers</string>
    <string name="members_string">members</string>
    <string name="add_contact">Add Contact</string>
    <string name="unplanned_tasks">Unplanned tasks assigned to George and tasks created by George with no assignee</string>
    <string name="add">Add</string>
    <string name="invite_members">Invite Members</string>
    <string name="invitation">Invitation</string>
    <string name="send_invitation_s">Send invitation(s)</string>
    <string name="revoke">Revoke</string>
    <string name="manage_invites">Manage Invites</string>
    <string name="sub_task_name">Sub-task name</string>
    <string name="select_assignee">Select assignee</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="select_contact_type">Select Contact Type</string>
    <string name="ok">Ok</string>
    <string name="set_contact_type">Set your %1$s contact</string>
    <string name="vk">Vk</string>
    <string name="whats_app">What\'s app</string>
    <string name="telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="wechat">Wechat</string>
    <string name="invite_person">Invite Person</string>
    <string name="revoked">revoked</string>
    <string name="invitation_activated">Invitation Activated</string>
    <string name="missing_email">Missing email</string>
    <string name="inbox">Inbox</string>
    <string name="no_deadline">No deadline</string>
    <string name="all_changes_saved">All changes saved</string>
    <string name="sub_task">Sub-task</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="first_name_optional">First name (optional)</string>
    <string name="last_name_optional">Last name (optional)</string>
    <string name="low_priority">Low</string>
    <string name="normal_priority">Normal</string>
    <string name="high_priority">High</string>
    <string name="urgent_priority">Urgent</string>
    <string name="logged_time">logged</string>
    <string name="assigned_to">Assigned to</string>
    <string name="planning_date">Planning Date</string>
    <string name="set_date">Set date</string>
    <string name="priority">Priority</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="actual_spent_time">Actual Spent Time</string>
    <string name="create_task">Create Task</string>
    <string name="comments">Comments</string>
    <string name="no_comments_yet">No comments yet</string>
    <string name="add_comment">Add comment</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="add_project">Add Project</string>
    <string name="edit_sections">Edit Sections</string>
    <string name="create_new_project">Create new project</string>
    <string name="project_name">Project name</string>
    <string name="task_field_settings">Task Field Settings</string>
    <string name="sections">Sections</string>
    <string name="epic_links">Epic Links</string>
    <string name="members">Members</string>
    <string name="type_project_name">Type project name</string>
    <string name="notes">Notes</string>
    <string name="select_project_members">Select Project Members</string>
    <string name="add_new_section">Add New Section</string>
    <string name="set_as_default">Set as Default</string>
    <string name="edit_section">Edit Section</string>
    <string name="default_string">default</string>
    <string name="hour_string">%sh</string>
    <string name="create_your_company_and_invite_your_team_members_to_join_your_new_workspace">Create your company and invite your team members to join your new workspace</string>
    <string name="you_will_need_to_ask_an_existing_member_of_the_company_to_invite_you_via_email_invitation">You will need to ask an existing member of the company to invite you via email invitation</string>
    <string name="add_new_epic_link">Add new epic link</string>


</resources>
