<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.CreateCompany">

    <TextView
        android:id="@+id/textView"
        style="@style/subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textStart"
        android:text="@string/choose_a_name_of_your_workspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/company_name"
        style="@style/inputPlaceholder"
        android:elevation="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_workspace_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/are_you_planning_to_work_alone_or_with_teammates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/company_name"
        app:layout_constraintTop_toBottomOf="@+id/company_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioGroup
            android:id="@+id/workspace_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"        android:paddingVertical="6dp"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/personal_workspace"
                style="@style/radioButton"
                android:checked="true"
                android:elevation="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/personal_workspace" />

            <RadioButton
                android:id="@+id/team_workspace"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:elevation="4dp"
                android:text="@string/my_team_and_me" />
        </RadioGroup>

        <TextView
            android:id="@+id/team_size_title"
            android:visibility="gone"
            style="@style/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/how_many_people_work_for_the_company" />

        <RadioGroup
            android:id="@+id/team_size_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/under_20"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:checked="true"
                android:button="@android:color/transparent"
                android:text="@string/under_20" />

            <RadioButton
                android:id="@+id/under_100"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/under_100" />

            <RadioButton
                android:id="@+id/under_500"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/under_500" />

            <RadioButton
                android:id="@+id/over_500"
                style="@style/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/over_500" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/create_company_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_next_btn"
        android:text="@string/create_company"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/create_company_waiting_to_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/wait_to_be_invited"
        app:layout_constraintBottom_toBottomOf="@+id/create_company_next_btn"
        app:layout_constraintEnd_toStartOf="@+id/create_company_next_btn"
        app:layout_constraintTop_toTopOf="@+id/create_company_next_btn"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/create_company_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="304dp"
        android:layout_height="210dp"
        android:src="@drawable/emika_layer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>