<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.JoinOrCreateCompany">



    <ImageView
        android:id="@+id/emika_gif"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="58dp"
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_oir_create_new_workspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emika_gif" />


    <LinearLayout
        android:id="@+id/join_existing_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="24dp"
        android:paddingHorizontal="24dp"
        android:background="@drawable/selector_input"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/join_existing_company"
            android:textColor="@color/green"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_will_need_to_ask_an_existing_member_of_the_company_to_invite_you_via_email_invitation" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/create_new_workspace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/selector_input"
        android:elevation="4dp"
        android:paddingVertical="24dp"
        android:paddingHorizontal="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/join_existing_company"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/create_new_workspace"
            android:textColor="@color/green"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="197dp"
            tools:layout_editor_absoluteY="327dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_your_company_and_invite_your_team_members_to_join_your_new_workspace"
            tools:layout_editor_absoluteX="197dp"
            tools:layout_editor_absoluteY="327dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ImageView
        android:layout_width="304dp"
        android:layout_height="210dp"
        android:src="@drawable/emika_layer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>