<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    tools:context=".presentation.ui.profile.CreateContactDialogFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/add_new_contact"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/createContactType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" />

        <EditText
            android:id="@+id/createContactValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="text"
            android:padding="8dp"
            android:background="@drawable/shape_input_invites"
            tools:text="Hello" />
        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createContactCancel"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:textColor="#009688"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_btn"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/createContactOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textAllCaps="false"
                android:textColor="#009688"
                android:background="@drawable/ripple_btn"
                android:text="@string/add" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>